--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -754,6 +754,17 @@
   timestamp = {2019.08.21},
 }
 
+@Book{Ahnert2020,
+  title     = {The Network Turn: Changing Perspectives in the Humanities},
+  publisher = {Cambridge University Press},
+  year      = {2020},
+  author    = {Ahnert, R. and Ahnert, S. E. and Coleman, C. N. and Weingart, S. B.},
+  series    = {Elements in Publishing and Book Culture},
+  doi       = {10.1017/9781108866804},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+}
+
 @Article{Ahonen2006,
   author    = {Ahonen, T. and Hadid, A. and Pietikainen, M.},
   title     = {Face Description with Local Binary Patterns: Application to Face Recognition},
@@ -4780,6 +4791,18 @@
   timestamp = {2019.04.12},
 }
 
+@InCollection{Bennett2007,
+  author    = {Bennett, C. and Wyall, J. and Spalteholtz, L. and Gooch, A.},
+  title     = {The Aesthetics of Graph Visualization},
+  booktitle = {Computational Aesthetics in Graphics, Visualization, and Imaging},
+  publisher = {The Eurographics Association},
+  year      = {2007},
+  pages     = {57-64},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {https://diglib.eg.org/bitstream/handle/10.2312/COMPAESTH.COMPAESTH07.057-064/057-064.pdf},
+}
+
 @Book{Benson1970,
   title     = {The Interpretation of Narrative: Theory and Practice},
   publisher = {Harvard University Press},
@@ -7777,6 +7800,17 @@
   timestamp = {2021.06.24},
 }
 
+@InProceedings{Broasca2019,
+  author    = {Broasca, L. and Ancusa, V.-M. and Ciocarlie, H.},
+  title     = {A Qualitative Analysis on Force Directed Network Visualization Tools in the Context of Large Complex Networks},
+  booktitle = {23rd International Conference on System Theory, Control and Computing},
+  year      = {2019},
+  pages     = {656-661},
+  doi       = {10.1109/icstcc.2019.8885641},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+}
+
 @Article{Broder2000,
   author    = {Broder, A. and Kumar, R. and Maghoul, F. and Raghavan, P. and Rajagopalan, S. and Stata, R. and Tomkins, A. and Wiener, J.},
   title     = {Graph structure in the Web},
@@ -9152,6 +9186,19 @@
   doi       = {10.1007/978-3-030-58539-6_34},
   owner     = {Vincent},
   timestamp = {2023.03.16},
+}
+
+@Article{Carbon2018,
+  author    = {Carbon, C.-C. and Mchedlidze, T. and Raab, M. Hans and Wächter, H.},
+  title     = {The Power of Shape: How Shape of Node-Link Diagrams Impacts Aesthetic Appreciation and Triggers Interest},
+  journal   = {i-Perception},
+  year      = {2018},
+  volume    = {9},
+  number    = {5},
+  pages     = {204166951879685},
+  doi       = {10.1177/2041669518796851},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
 }
 
 @Article{Cardillo2013,
@@ -10561,6 +10608,16 @@
   timestamp = {2020.08.14},
 }
 
+@Book{Cherven2015,
+  title     = {Mastering {Gephi} Network Visualization},
+  publisher = {Packt Publishing},
+  year      = {2015},
+  author    = {Cherven, K.},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {https://www.packtpub.com/product/mastering-gephi-network-visualization/9781783987344},
+}
+
 @InProceedings{Chi2007,
   author    = {Chi, Y. and Song, X. and Zhou, D. and Hino, K. and Tseng, B. L.},
   title     = {Evolutionary spectral clustering by incorporating temporal smoothness},
@@ -11795,6 +11852,16 @@
   owner     = {Vincent},
   timestamp = {2019.04.09},
   url       = {https://www.routledge.com/Whos-Who-in-the-Old-Testament-2nd-Edition/Comay/p/book/9780415260312},
+}
+
+@InProceedings{Combe2010,
+  author    = {Combe, D. and Largeron, C. and Egyed-Zsigmond, E. and Géry, M.},
+  title     = {A comparative study of social network analysis tools},
+  booktitle = {International Workshop on Web Intelligence and Virtual Enterprises},
+  year      = {2010},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {https://hal.science/hal-00531447/},
 }
 
 @Book{Combes1981,
@@ -13996,6 +14063,19 @@
   timestamp = {2019.04.10},
 }
 
+@Article{Derrible2009,
+  author    = {Derrible, S. and Kennedy, C.},
+  title     = {Network Analysis of World Subway Systems Using Updated Graph Theory},
+  journal   = {Transportation Research Record},
+  year      = {2009},
+  volume    = {2112},
+  number    = {1},
+  pages     = {17–25},
+  doi       = {10.3141/2112-03},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+}
+
 @Article{Derrick2014,
   author    = {Derrick, F. W. and Williams, N. A. and Scott, C. E.},
   title     = {A Two-Stage Proxy Variable Approach to Estimating Movie Box Office Receipts},
@@ -14517,6 +14597,19 @@
   doi       = {10.5334/bbi.30},
   owner     = {Vincent},
   timestamp = {2018.10.26},
+}
+
+@Article{Dogrusoz2009,
+  author    = {Dogrusoz, U. and Giral, E. and Cetintas, A. and Civril, A. and Demir, E.},
+  title     = {A layout algorithm for undirected compound graphs},
+  journal   = {Information Sciences},
+  year      = {2009},
+  volume    = {179},
+  number    = {7},
+  pages     = {980–994},
+  doi       = {10.1016/j.ins.2008.11.017},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
 }
 
 @Article{Doitch2019,
@@ -15108,6 +15201,16 @@
   doi       = {10.1002/9781118680605.ch17},
   owner     = {Vincent},
   timestamp = {2023.08.07},
+}
+
+@Book{Drucker2020,
+  title     = {Visualization and Interpretation: Humanistic Approaches to Display},
+  publisher = {MIT Press},
+  year      = {2020},
+  author    = {Drucker, J.},
+  doi       = {10.7551/mitpress/12523.001.0001},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
 }
 
 @Article{DSouza2007,
@@ -16755,6 +16858,19 @@
   url       = {https://www.jstor.org/stable/40983820},
 }
 
+@Article{Enright2001,
+  author    = {Enright, A. J. and Ouzounis, C. A.},
+  title     = {BioLayout—an automatic graph layout algorithm for similarity visualization},
+  journal   = {Bioinformatics},
+  year      = {2001},
+  volume    = {17},
+  number    = {9},
+  pages     = {853–854},
+  doi       = {10.1093/bioinformatics/17.9.853},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+}
+
 @Article{Entman1989,
   author    = {Entman, R. M.},
   title     = {How the Media Affect What People Think: An Information Processing Approach},
@@ -16988,6 +17104,19 @@
   doi       = {10.1002/1097-0037(200010)36:3<156::aid-net2>3.0.co;2-l},
   owner     = {Vincent},
   timestamp = {2022.07.08},
+}
+
+@Article{Es2021,
+  author    = {van Es, K. and Schäfer, M. T. and Wieringa, M.},
+  title     = {Tool Criticism and the Computational Turn: A `Methodological Moment' in Media and Communication Studies},
+  journal   = {M\&K Medien \& Kommunikationswissenschaft},
+  year      = {2021},
+  volume    = {69},
+  number    = {1},
+  pages     = {46-64},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {https://www.nomos-elibrary.de/10.5771/1615-634X-2021-1-46.pdf?download_full_pdf=1&page=1},
 }
 
 @Book{Esmein2004,
@@ -19740,6 +19869,19 @@
   url       = {https://www.upress.umn.edu/book-division/books/the-exploit},
 }
 
+@Article{Galloway2011,
+  author    = {Galloway, A.},
+  title     = {Are Some Things Unrepresentable?},
+  journal   = {Theory, Culture \& Society},
+  year      = {2011},
+  volume    = {28},
+  number    = {7–8},
+  pages     = {85–102},
+  doi       = {10.1177/0263276411423038},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+}
+
 @Article{Galtier2004,
   author    = {Galtier, N.},
   title     = {Sampling Properties of the Bootstrap Support in Molecular Phylogeny: Influence of Nonindependence Among Sites},
@@ -20631,6 +20773,20 @@
   owner     = {Vincent},
   timestamp = {2022.06.21},
   url       = {https://www.cambridge.org/fr/academic/subjects/computer-science/algorithmics-complexity-computer-algebra-and-computational-g/algorithmic-graph-theory},
+}
+
+@Article{Gibson2012,
+  author        = {Gibson, H. and Faith, J. and Vickers, P.},
+  title         = {A survey of two-dimensional graph layout techniques for information visualisation},
+  journal       = {Information Visualization},
+  year          = {2012},
+  volume        = {12},
+  number        = {3-4},
+  pages         = {324-357},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1177/1473871612455749},
+  owner         = {Vincent},
+  timestamp     = {2022.04.29},
 }
 
 @Article{Gibson2015,
@@ -24165,6 +24321,19 @@
   timestamp = {2019.06.27},
 }
 
+@Article{Healy2015,
+  author    = {Healy, K.},
+  title     = {The Performativity of Networks},
+  journal   = {European Journal of Sociology},
+  year      = {2015},
+  volume    = {56},
+  number    = {2},
+  pages     = {175–205},
+  doi       = {10.1017/s0003975615000107},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+}
+
 @Book{Healy2018,
   title     = {Data Visualization: A Practical Introduction},
   publisher = {Princeton University Press},
@@ -24251,6 +24420,17 @@
   doi       = {10.1109/infvis.2005.1532126},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+}
+
+@InProceedings{Heer2005a,
+  author    = {Heer, J. and Card, S. K. and Landay, J. A.},
+  title     = {{prefuse}: a toolkit for interactive information visualization},
+  booktitle = {SIGCHI Conference on Human Factors in Computing Systems},
+  year      = {2005},
+  pages     = {421-430},
+  doi       = {10.1145/1054972.1055031},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
 }
 
 @Book{Hegel1975,
@@ -27123,6 +27303,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.06.24},
 }
 
+@Book{Jameson1991,
+  title     = {Postmodernism, or, The Cultural Logic of Late Capitalism},
+  publisher = {Duke University Press},
+  year      = {1991},
+  author    = {Jameson, F.},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {https://web.education.wisc.edu/halverson/wp-content/uploads/sites/33/2012/12/jameson.pdf},
+}
+
 @InCollection{Jameson2010,
   author    = {Jameson, F.},
   title     = {Afterword: A Note on Literary Realism},
@@ -28583,6 +28773,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp    = {2022.06.06},
 }
 
+@Article{Kamada1989,
+  author    = {Kamada, T. and Kawai, S.},
+  title     = {An algorithm for drawing general undirected graphs},
+  journal   = {Information Processing Letters},
+  year      = {1989},
+  volume    = {31},
+  number    = {1},
+  pages     = {7-15},
+  doi       = {10.1016/0020-0190(89)90102-6},
+  owner     = {Vincent},
+  timestamp = {2012.08.25},
+}
+
 @InProceedings{Kambhatla2004,
   author    = {Kambhatla, N.},
   title     = {Combining lexical, syntactic, and semantic features with maximum entropy models for extracting relations},
@@ -29203,6 +29406,31 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1111/1467-6451.00168},
   owner     = {Vincent},
   timestamp = {2020.11.30},
+}
+
+@Article{Kennedy2017,
+  author    = {Kennedy, H. and Hill, R. L.},
+  title     = {The Feeling of Numbers: Emotions in Everyday Engagements with Data and Their Visualisation},
+  journal   = {Sociology},
+  year      = {2017},
+  volume    = {52},
+  number    = {4},
+  pages     = {830–848},
+  doi       = {10.1177/0038038516674675},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+}
+
+@InCollection{Kennedy2020,
+  author    = {Kennedy, H. and Engebretsen, M.},
+  title     = {Introduction : The relationships between graphs, charts, maps and meanings, feelings, engagements},
+  booktitle = {Data Visualization in Society},
+  publisher = {Amsterdam University Press},
+  year      = {2020},
+  pages     = {19–32},
+  doi       = {10.1515/9789048543137-005},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
 }
 
 @Article{Kent_1910,
@@ -30279,6 +30507,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.sigwi2.org/},
 }
 
+@InCollection{Kobourov2013,
+  author    = {Kobourov, S. G.},
+  title     = {Force-Directed Drawing Algorithms},
+  booktitle = {Handbook of Graph Drawing and Visualization},
+  publisher = {Chapman and Hall/CRC},
+  year      = {2013},
+  chapter   = {12},
+  pages     = {383-408},
+  doi       = {10.1201/b15385-15},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+}
+
 @Book{Koch2009,
   title     = {The Modern Library Writer's Workshop: A Guide to the Craft of Fiction},
   publisher = {Modern Library},
@@ -30551,6 +30792,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2021.06.24},
   url       = {https://hdl.handle.net/11245.1/cb936704-8215-4f47-9013-0d43d37f1ce7},
+}
+
+@Article{Koolen2018a,
+  author    = {Koolen, M. and van Gorp, J. and van Ossenbruggen, J.},
+  title     = {Toward a model for digital tool criticism: Reflection as integrative practice},
+  journal   = {Digital Scholarship in the Humanities},
+  year      = {2018},
+  volume    = {34},
+  number    = {2},
+  pages     = {368–385},
+  doi       = {10.1093/llc/fqy048},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
 }
 
 @Article{Koprinska2001,
@@ -36507,6 +36761,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.jstor.org/stable/752035},
 }
 
+@InProceedings{Majeed2020,
+  author    = {Majeed, S. and Uzair, M. and Qamar, U. and Farooq, A.},
+  title     = {Social Network Analysis Visualization Tools: A Comparative Review},
+  booktitle = {23rd IEEE International Multitopic Conference},
+  year      = {2020},
+  pages     = {1-6},
+  doi       = {10.1109/inmic50486.2020.9318162},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+}
+
 @Article{Majumder2016,
   author    = {Majumder, A.},
   title     = {Can {Bengali} Literature be Postcolonial?},
@@ -36859,6 +37124,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1037/rev0000283},
   owner     = {Vincent},
   timestamp = {2023.08.12},
+}
+
+@Book{Manovich2001,
+  title     = {The Language of New Media},
+  publisher = {MIT Press},
+  year      = {2001},
+  author    = {Manovich, L.},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {https://mitpress.mit.edu/9780262296915/the-language-of-new-media/},
 }
 
 @Book{Mantegna2000,
@@ -40682,6 +40957,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.cabi.org/bookshop/book/9781780643915/},
 }
 
+@Article{Mrvar2016,
+  author    = {Mrvar, A. and Batagelj, V.},
+  title     = {Analysis and visualization of large networks with program package Pajek},
+  journal   = {Complex Adaptive Systems Modeling},
+  year      = {2016},
+  volume    = {4},
+  pages     = {6},
+  doi       = {10.1186/s40294-016-0017-8},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+}
+
 @Article{Mryglod2015,
   author    = {Mryglod, O. and Fuchs, B. and Szell, M. and Holovatch, Y. and Thurner, S.},
   title     = {Interevent time distributions of human multi-level activity in a virtual world},
@@ -44424,6 +44711,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://arxiv.org/abs/1009.5972},
 }
 
+@PhdThesis{Pemberton2023,
+  author      = {Pemberton, E. I.},
+  title       = {A Computational, Multimodal Evaluation of Black Representations in Theatrical Films},
+  year        = {2023},
+  type        = {PhD Thesis},
+  institution = {Northcentral University},
+  owner       = {Vincent},
+  timestamp   = {2023.12.12},
+  url         = {https://www.proquest.com/openview/77d7ef3edfd0f34a6f41c8f9ea9b6a80/1},
+}
+
 @InCollection{Penard2008,
   author    = {Pénard, T.},
   title     = {Game Theory and Institutions},
@@ -46040,6 +46338,32 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/vissof.2002.1019790},
   owner     = {Vincent},
   timestamp = {2019.03.23},
+}
+
+@Article{Purchase2002a,
+  author    = {Purchase, H. C.},
+  title     = {Metrics for Graph Drawing Aesthetics},
+  journal   = {Journal of Visual Languages \&amp; Computing},
+  year      = {2002},
+  volume    = {13},
+  number    = {5},
+  pages     = {501–516},
+  doi       = {10.1006/jvlc.2002.0232},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+}
+
+@Article{Purchase2002b,
+  author    = {Purchase, H. C. and Carrington, D. and Allder, J.-A.},
+  title     = {Empirical Evaluation of Aesthetics-based Graph Layout},
+  journal   = {Empirical Software Engineering},
+  year      = {2002},
+  volume    = {7},
+  number    = {3},
+  pages     = {233–255},
+  doi       = {10.1023/a:1016344215610},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
 }
 
 @InProceedings{Purchase2003,
@@ -47734,6 +48058,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1111/cgf.12884},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+}
+
+@InCollection{Rieder2017,
+  author    = {Rieder, B. and Röhle, T.},
+  title     = {Digital Methods: From Challenges to Bildung},
+  booktitle = {The Datafied Society},
+  publisher = {Amsterdam University Press},
+  year      = {2017},
+  chapter   = {7},
+  pages     = {109-124},
+  doi       = {10.1515/9789048531011-010},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
 }
 
 @InCollection{Riedl2003,
@@ -52511,6 +52848,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.05.05},
 }
 
+@InCollection{Sinclair2013,
+  author    = {Sinclair, S. and Ruecker, S. and Radzikowska, M.},
+  title     = {Information Visualization for Humanities Scholars},
+  booktitle = {Literary Studies in the Digital Age: An Evolving Anthology},
+  publisher = {Modern Language Association},
+  year      = {2013},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {https://dlsanthology.mla.hcommons.org/information-visualizationfor-humanities-scholars/},
+}
+
 @Article{Singh2012,
   author    = {Singh, K. P. and Gupta, S. and Kumar, A. and Shukla, S. P.},
   title     = {Linear and nonlinear modeling approaches for urban air quality prediction},
@@ -56924,6 +57272,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://ids-pub.bsz-bw.de/frontdoor/index/index/docId/8770},
 }
 
+@Book{Tufte1983,
+  title     = {The Visual Display of Quantitative Information},
+  publisher = {Graphics Press},
+  year      = {1983},
+  author    = {Tufte, E.},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {https://www.edwardtufte.com/tufte/books_vdqi},
+}
+
 @Book{Tukey1977,
   title     = {Exploratory data analysis},
   publisher = {Addison-Wesley},
@@ -57800,6 +58158,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1515/9789048531011-014},
   owner     = {Vincent},
   timestamp = {2016.03.02},
+}
+
+@Article{Venturini2019,
+  author    = {Venturini, T. and Jacomy, M. and Jensen, P.},
+  title     = {What do we see when we look at networks: Visual network analysis, relational ambiguity, and force-directed layouts},
+  journal   = {Big Data \& Society},
+  year      = {2021},
+  volume    = {8},
+  number    = {1},
+  pages     = {205395172110184},
+  doi       = {10.1177/20539517211018488},
+  owner     = {Vincent},
+  review    = {arXiv: https://arxiv.org/abs/1905.02202},
+  timestamp = {2019.05.09},
 }
 
 @Article{Verbrugge1977,
@@ -59036,6 +59408,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.elsevier.com/books/visual-thinking/ware/978-0-12-370896-0},
 }
 
+@Book{Ware2013,
+  title     = {Information Visualization: Perception for Design},
+  publisher = {Morgan Kaufmann},
+  year      = {2013},
+  author    = {Ware, C.},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {https://shop.elsevier.com/books/information-visualization/ware/978-0-12-812875-6},
+}
+
 @Article{Wasa2016,
   author    = {Wasa, K.},
   title     = {Enumeration of Enumeration Algorithms},
@@ -60093,6 +60475,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1093/res/os-III.12.385},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+}
+
+@Article{Wilson1986,
+  author    = {Wilson, R. J.},
+  title     = {An Eulerian trail through Königsberg},
+  journal   = {Journal of Graph Theory},
+  year      = {1986},
+  volume    = {10},
+  number    = {3},
+  pages     = {265-275},
+  doi       = {10.1002/jgt.3190100305},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
 }
 
 @Article{Wilson1987,
