--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -50555,6 +50555,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/books?id=vkonAAAAMAAJ},
 }
 
+@Book{Scherer1968,
+  title     = {La Dramaturgie classique en France},
+  publisher = {Nizet},
+  year      = {1968},
+  author    = {Scherer, J.},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {https://books.google.fr/books/?id=4W13oAEACAAJ},
+}
+
 @Article{Scheuerman2019,
   author    = {Scheuerman, M. K. and Paul, J. M. and Brubaker, J. R.},
   title     = {How Computers See Gender: An Evaluation of Gender Classification in Commercial Facial Analysis Services},
