--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1802,6 +1802,17 @@
   timestamp = {2022.07.19},
 }
 
+@InProceedings{Amstutz2010,
+  author    = {Amstutz, D. and Gambette, P.},
+  title     = {Utilisation de la visualisation en nuage arboré pour l’analyse littéraire},
+  booktitle = {Journées internationales d'analyse statistique des données textuelles},
+  year      = {2010},
+  pages     = {227-238},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {https://igm.univ-mlv.fr/~gambette/2010AmstutzGambette.pdf},
+}
+
 @InProceedings{Anand2011,
   author    = {Anand, P. and Walker, M. and Abbott, R. and Fox Tree, J. E. and Bowmani, R. and Minor, M.},
   title     = {Cats rule and dogs drool!: classifying stance in online debate},
@@ -8055,6 +8066,16 @@
   timestamp = {2020.12.12},
 }
 
+@Article{Brunet2007,
+  author    = {Brunet, É.},
+  title     = {Fréquences et séquences. Mises en oeuvre dans Hyperbase},
+  journal   = {Lexicometrica},
+  year      = {2007},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {https://web.archive.org/web/20180410052103id_/http://lexicometrica.univ-paris3.fr/numspeciaux/special9/brunet.pdf},
+}
+
 @InProceedings{Brunner2020,
   author    = {Brunner, A. and Engelberg, S. and Jannidis, F. and Tu, N. D. T. and Weimer, L.},
   title     = {Corpus REDEWIEDERGABE},
@@ -8087,6 +8108,28 @@
   owner     = {Vincent},
   timestamp = {2019.04.07},
   url       = {https://books.google.fr/books?id=KnQXQOP5uoMC},
+}
+
+@InProceedings{Brynes2010,
+  author    = {Brynes, R.},
+  title     = {A statistical analysis of the `Eumaeus' Phrasemes in James Joyce's Ulysses},
+  booktitle = {Journées internationales d'analyse statistique des données textuelles},
+  year      = {2010},
+  pages     = {289-296},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {https://www.ledonline.it/ledonline/JADT-2010/allegati/JADT-2010-0289-0296_184-Byrnes.pdf},
+}
+
+@InProceedings{Brynes2012,
+  author    = {Brynes, R.},
+  title     = {The Stylometry of Cliche Density and Character},
+  booktitle = {Journées internationales d'analyse statistique des données textuelles},
+  year      = {2012},
+  pages     = {239-246},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {https://citeseerx.ist.psu.edu/document?repid=rep1&type=pdf&doi=11b0c2126fba0239be08b5576abaef680b77af1f},
 }
 
 @Article{Bu2020,
@@ -19835,6 +19878,19 @@
   url       = {https://sht.asso.fr/parler-de-soi-parler-aux-autres-statistiques-des-pronoms-de-dialogue-et-classifications-des-personnages-de-theatre/},
 }
 
+@Article{Galleron2017a,
+  author    = {Galleron, I.},
+  title     = {Conceptualisation of theatrical characters in the digital paradigm: needs, problems and foreseen solutions},
+  journal   = {Human and Social Studies},
+  year      = {2017},
+  volume    = {6},
+  number    = {1},
+  pages     = {88-108},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {https://philpapers.org/rec/GALCOT-8},
+}
+
 @Article{Gallese1998,
   author    = {Gallese, V.},
   title     = {Mirror neurons and the simulation theory of mind-reading},
@@ -24443,6 +24499,17 @@
   url       = {https://books.google.fr/books?id=HAUbAQAAIAAJ},
 }
 
+@InCollection{Heiden2011,
+  author    = {Heiden, Serge and Lavrentiev, Alexei},
+  title     = {Exploration Textométrique Du Corpus Bouvard},
+  booktitle = {Bouvard et Pécuchet : les ``seconds volumes'' possibles - documentation, circulations, édition},
+  publisher = {Éditons de l’ENS},
+  year      = {2011},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {http://halshs.archivesouvertes.fr/halshs-00678874},
+}
+
 @Article{Heider1944,
   author    = {Heider, F.},
   title     = {Social perception and phenomenal causality},
@@ -25176,6 +25243,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1093/acprof:oso/9780198711940.001.0001},
   owner     = {Vincent},
   timestamp = {2020.01.02},
+}
+
+@InCollection{Hockey2004,
+  author    = {Hockey, S.},
+  title     = {The History of Humanities Computing},
+  booktitle = {A Companion to Digital Humanities},
+  publisher = {Blackwell},
+  year      = {2004},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {http://www.digitalhumanities.org/companion/},
 }
 
 @InProceedings{Hodosh2013,
@@ -29034,6 +29112,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.25},
   url       = {https://www.cambridge.org/fr/academic/subjects/literature/renaissance-and-early-modern-literature/shakespeare-and-book},
+}
+
+@Article{KastbergSjoeblom2004,
+  author    = {Kastberg Sjöblom, M.},
+  title     = {L’indice pronominal est-il encore d’actualité ?},
+  journal   = {Lexicometrica},
+  year      = {2004},
+  volume    = {5},
+  pages     = {1-21},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {http://lexicometrica.univ-paris3.fr/article/numero5/lexicometrica-kastberg.pdf},
 }
 
 @InCollection{Katajala2016,
@@ -33588,6 +33678,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1207/s15516709cog0504_1},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+}
+
+@Article{Leimdorfer1995,
+  author    = {Leimdorfer, F. and Salem, André},
+  title     = {Usages de la lexicométrie en analyse de discours},
+  journal   = {Cahiers des Sciences Humaines},
+  year      = {1995},
+  volume    = {31},
+  number    = {1},
+  pages     = {131-143},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {https://horizon.documentation.ird.fr/exl-doc/pleins_textes/pleins_textes_4/sci_hum/41740.pdf},
 }
 
 @Book{Leinwand1999,
@@ -41171,6 +41274,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.05},
 }
 
+@Book{Muller1979,
+  title     = {Langue française et linguistique quantitative},
+  publisher = {Slatkine},
+  year      = {1979},
+  author    = {Muller, C.},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {https://www.librairie-gallimard.com/livre/3600120115003-langue-francaise-et-linguistique-quantitative-charles-muller/},
+}
+
 @Article{Mulvey1975,
   author    = {Mulvey, L.},
   title     = {Visual Pleasure and Narrative Cinema},
@@ -47896,6 +48009,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.physa.2007.07.001},
   owner     = {Vincent},
   timestamp = {2022.06.22},
+}
+
+@Article{Riba2006,
+  author    = {Riba, A. and Ginebra, J.},
+  title     = {Diversity of vocabulary and homogeneity of literary style},
+  journal   = {Journal of Applied Statistics},
+  year      = {2006},
+  volume    = {33},
+  number    = {7},
+  pages     = {729–741},
+  doi       = {10.1080/02664760600708970},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
 }
 
 @Article{Ribeiro2016,
@@ -58660,6 +58786,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/s12198-012-0092-9},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@Article{Vonflet2007,
+  author    = {Vonflet, S.},
+  title     = {Le graphonaute ou Molière retrouvé},
+  journal   = {Lexicometrica},
+  year      = {2007},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {https://web.archive.org/web/20180410052201id_/http://lexicometrica.univ-paris3.fr/numspeciaux/special9/Vanfelt.pdf},
 }
 
 @InProceedings{Voorhees1999,
