--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1600,6 +1600,19 @@
   url       = {https://aclanthology.org/2022.jeptalnrecital-taln.19/},
 }
 
+@InProceedings{Amalvy2022b,
+  author    = {Amalvy, A. and Labatut, V. and Dufour, R.},
+  title     = {Data Augmentation for Robust Character Detection in Fantasy Novels},
+  booktitle = {Workshop on Computational Methods in the Humanities},
+  year      = {2022},
+  volume    = {3602},
+  series    = {CEUR Workshop Proceedings},
+  pages     = {23-32},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
+  url       = {https://ceur-ws.org/Vol-3602/paper2.pdf},
+}
+
 @InProceedings{Amalvy2023,
   author    = {Amalvy, A. and Labatut, V. and Dufour, R.},
   title     = {The Role of Global and Local Context in Named Entity Recognition},
@@ -4307,14 +4320,38 @@
   timestamp = {2022.06.26},
 }
 
+@Article{Bavaud2013,
+  author  = {Bavaud, F.},
+  title   = {Testing spatial autocorrelation in weighted networks: the modes permutation test},
+  journal = {Journal of Geographical Systems},
+  year    = {2013},
+  volume  = {15},
+  number  = {3},
+  pages   = {233–247},
+  doi     = {10.1007/s10109-013-0179-2},
+}
+
 @InProceedings{Bavaud2022,
-  author    = {Bavaud, F. and Metrailler, C.},
+  author    = {Bavaud, F. and Métrailler, C.},
   title     = {A (dis)similarity index for comparing two character networks},
   booktitle = {Workshop on Computational Methods in the Humanities},
   year      = {2022},
   owner     = {Vincent},
   timestamp = {2022.06.23},
   url       = {https://wp.unil.ch/llist/files/2022/06/COMHUM_2022_paper_7.pdf},
+}
+
+@InProceedings{Bavaud2022a,
+  author    = {Bavaud, F. and Métrailler, C.},
+  title     = {A (Dis)similarity Index for Comparing Two Character Networks Based on the Same Story},
+  booktitle = {Workshop on Computational Methods in the Humanities},
+  year      = {2022},
+  volume    = {3602},
+  series    = {CEUR Workshop Proceedings},
+  pages     = {33-42},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
+  url       = {https://ceur-ws.org/Vol-3602/paper3.pdf},
 }
 
 @Article{Bavelas1948,
@@ -22732,6 +22769,19 @@
   url       = {https://wp.unil.ch/llist/files/2022/06/COMHUM_2022_paper_16.pdf},
 }
 
+@InProceedings{Guex2022a,
+  author    = {Guex, G.},
+  title     = {A Framework for Embedding Entities in a Textual Narrative: a Case Study on Les Misérables},
+  booktitle = {Workshop on Computational Methods in the Humanities},
+  year      = {2022},
+  volume    = {3602},
+  series    = {CEUR Workshop Proceedings},
+  pages     = {43-61},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
+  url       = {https://ceur-ws.org/Vol-3602/paper4.pdf},
+}
+
 @InProceedings{Guha2015,
   author    = {Guha, T. and Kumar, N. and Narayanan, S. S. and Smith, S. L.},
   title     = {Computationally deconstructing movie narratives: an informatics approach},
@@ -39252,6 +39302,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://wp.unil.ch/llist/files/2022/06/COMHUM_2022_paper_8.pdf},
 }
 
+@InProceedings{Metrailler2022a,
+  author    = {Métrailler, C.},
+  title     = {Narrative Flow: A Formal Distant Reading Approach for Interactive Narratives},
+  booktitle = {Workshop on Computational Methods in the Humanities},
+  year      = {2022},
+  volume    = {3602},
+  series    = {CEUR Workshop Proceedings},
+  pages     = {85-94},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
+  url       = {https://ceur-ws.org/Vol-3602/paper6.pdf},
+}
+
 @Book{Metz1990,
   title     = {Film Language: A Semiotics of the Cinema},
   publisher = {University of Chicago Press},
@@ -48590,6 +48653,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.3726/978-3-653-05820-8_03},
   owner     = {Vincent},
   timestamp = {2021.02.04},
+}
+
+@Article{Robert_1976,
+  author  = {Robert, P. and Escoufier, Y.},
+  title   = {A Unifying Tool for Linear Multivariate Statistical Methods: The RV-Coefficient},
+  journal = {Applied Statistics},
+  year    = {1976},
+  volume  = {25},
+  number  = {3},
+  pages   = {257},
+  doi     = {10.2307/2347233},
 }
 
 @InProceedings{Roberts2008,
