--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -4321,14 +4321,30 @@
 }
 
 @Article{Bavaud2013,
-  author  = {Bavaud, F.},
-  title   = {Testing spatial autocorrelation in weighted networks: the modes permutation test},
-  journal = {Journal of Geographical Systems},
-  year    = {2013},
-  volume  = {15},
-  number  = {3},
-  pages   = {233–247},
-  doi     = {10.1007/s10109-013-0179-2},
+  author    = {Bavaud, F.},
+  title     = {Testing spatial autocorrelation in weighted networks: the modes permutation test},
+  journal   = {Journal of Geographical Systems},
+  year      = {2013},
+  volume    = {15},
+  number    = {3},
+  pages     = {233–247},
+  doi       = {10.1007/s10109-013-0179-2},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
+}
+
+@InProceedings{Bavaud2014,
+  author    = {Bavaud, F.},
+  title     = {Spatial Weights: Constructing Weight-Compatible Exchange Matrices from Proximity Matrices},
+  booktitle = {International Conference on Geographic Information Science},
+  year      = {2014},
+  volume    = {8728},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {81-96},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-319-11593-1_6},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
 }
 
 @InProceedings{Bavaud2022,
@@ -4352,6 +4368,18 @@
   owner     = {Vincent},
   timestamp = {2024.01.02},
   url       = {https://ceur-ws.org/Vol-3602/paper3.pdf},
+}
+
+@Article{Bavaud2023,
+  author    = {Bavaud, F.},
+  title     = {Exact first moments of the RV coefficient by invariant orthogonal integration},
+  journal   = {Journal of Multivariate Analysis},
+  year      = {2023},
+  volume    = {198},
+  pages     = {105227},
+  doi       = {10.1016/j.jmva.2023.105227},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
 }
 
 @Article{Bavelas1948,
@@ -12484,6 +12512,16 @@
   timestamp = {2019.03.29},
 }
 
+@Book{Cover1999,
+  title     = {Elements of information theory},
+  publisher = {John Wiley \& Sons},
+  year      = {1999},
+  author    = {Cover, T. M.},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
+  url       = {https://books.google.fr/books/?id=3yGJrqyanyYC},
+}
+
 @Article{Cowley2001,
   author    = {Cowley, C.},
   title     = {Moral Dilemmas in Greek Tragedies: A Discussion of Aeschylus's Agamemnon and Sophokles's Antigone},
@@ -12940,6 +12978,19 @@
   doi       = {10.3758/s13423-016-1051-4},
   owner     = {Vincent},
   timestamp = {2023.03.16},
+}
+
+@Article{Cuturi2014,
+  author    = {Cuturi, M. and Avis, D.},
+  title     = {Ground Metric Learning},
+  journal   = {Journal of Machine Learning Research},
+  year      = {2014},
+  volume    = {15},
+  number    = {17},
+  pages     = {533-564},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
+  url       = {https://jmlr.org/papers/v15/cuturi14a.html},
 }
 
 @Article{Czachesz2012,
@@ -28384,6 +28435,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.06.29},
 }
 
+@Article{Josse2008,
+  author    = {Josse, J. and Pagès, J. and Husson, F.},
+  title     = {Testing the significance of the {RV} coefficient},
+  journal   = {Computational Statistics \& Data Analysis},
+  year      = {2008},
+  volume    = {53},
+  number    = {1},
+  pages     = {82–91},
+  doi       = {10.1016/j.csda.2008.06.012},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
+}
+
 @Article{Joubert2004,
   author    = {Joubert, S. and Mauries, S. and Barbeau, E. and Ceccaldi, M. and Poncet, M.},
   title     = {The role of context in remembering familar persons: Insights from semantic dementia},
@@ -29438,6 +29502,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner       = {Vincent},
   timestamp   = {2021.09.16},
   url         = {http://swepub.kb.se/bib/swepub:oai:DiVA.org:nai-104?vw=full&tab2=abs},
+}
+
+@Book{Kemeny1983,
+  title     = {Finite Markov chains},
+  publisher = {Springer},
+  year      = {1983},
+  author    = {Kemeny, J. G. and Snell, J. L.},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
+  url       = {https://www.math.pku.edu.cn/teachers/yaoy/Fall2011/Kemeny-Snell1976.pdf},
 }
 
 @InProceedings{Kempe2003,
@@ -48655,15 +48729,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.02.04},
 }
 
-@Article{Robert_1976,
-  author  = {Robert, P. and Escoufier, Y.},
-  title   = {A Unifying Tool for Linear Multivariate Statistical Methods: The RV-Coefficient},
-  journal = {Applied Statistics},
-  year    = {1976},
-  volume  = {25},
-  number  = {3},
-  pages   = {257},
-  doi     = {10.2307/2347233},
+@Article{Robert1976,
+  author    = {Robert, P. and Escoufier, Y.},
+  title     = {A Unifying Tool for Linear Multivariate Statistical Methods: The RV-Coefficient},
+  journal   = {Applied Statistics},
+  year      = {1976},
+  volume    = {25},
+  number    = {3},
+  pages     = {257},
+  doi       = {10.2307/2347233},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
 }
 
 @InProceedings{Roberts2008,
@@ -49985,6 +50061,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2023.11.25},
   url       = {https://scientificmagazine.ru/images/PDF/2019/39/literature-mirror.pdf},
+}
+
+@InProceedings{Saerens2004,
+  author    = {Saerens, M. and Fouss, F. and Yen, L. and Dupont, P.},
+  title     = {The principal components analysis of a graph, and its relationships to spectral clustering},
+  booktitle = {European Conference on Machine Learning},
+  year      = {2004},
+  volume    = {3201},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {371-383},
+  doi       = {10.1007/978-3-540-30115-8_35},
+  owner     = {Vincent},
+  timestamp = {2010.12.26},
 }
 
 @Article{Sagi2013,
@@ -58543,6 +58632,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.06.23},
   url       = {https://wp.unil.ch/llist/files/2022/06/COMHUM_2022_paper_17.pdf},
+}
+
+@Book{Villani2009,
+  title     = {Optimal Transport},
+  publisher = {Springer},
+  year      = {2009},
+  author    = {Villani, C.},
+  volume    = {338},
+  series    = {Grundlehren der mathematischen Wissenschaften},
+  doi       = {10.1007/978-3-540-71050-9},
+  owner     = {Vincent},
+  timestamp = {2024.01.02},
 }
 
 @InProceedings{Vinciarelli2007,
